# arc3-substrate-discovery-paper

./: LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
artifacts/object_substrate_v0/gamma2a_cross_game_substrate_report/: cross_game_substrate_report.json
artifacts/object_substrate_v0/gamma3a_third_game_substrate_audit/: action_effect_audit.json  game_selection.json  gamma3b_decision.json  goal_evidence_audit.json  perception_audit.json  substrate_gap_classification.json  transferability_map_vs_ls20_tr87.json
docs/object_substrate_v0/: gamma3a_third_game_substrate_audit.md
docs/paper/: claim_inventory.md  known_gaps.md  results_table.md  substrate_gap_taxonomy.md
kaggle/notebook_candidate/: arc3_object_substrate_submission.ipynb  my_agent.py  notebook_candidate_manifest.json
kaggle/package_candidate/: CLAIM_BOUNDARIES.md  LICENSE_CHECKLIST.md  PACKAGE_MANIFEST.json  README.md  README_SUBMISSION.md  kaggle_agent_api_contract.json  public_scorecard_evidence.json  requirements.txt  submission_entrypoint.py  substrate_plans.json
kaggle/submission_record/: notebook_pre_submission_snapshot.json  notebook_version_commit_record.json  post_submission_agent_review.json  pre_submission_snapshot.json  submission_record.json
paper/: cross_game_substrate_results.md  references.md  submission_candidate_metadata.json  submission_manuscript.md
tests/: test_paper_submission_candidate.py  test_public_release_preflight.py
tools/paper/: build_public_release_preflight.py  build_submission_candidate.py
(+13 files in other folders)
